0.18
Improved error messages when errors are returned from the api.

0.17
Added schema version checking to all MySQL tasks.
Updated xml reading tasks to provide line number information when parse errors occur.
Modified xml writing tasks to include the osmosis version number in the generator attribute.
Updated mysql tasks to support the new tile indexing and fixed precision lat/lon.

0.16
Fixed a major bug in UTF-8 handling when writing xml files.  All files were being written in the default character set.

0.15
Added full 0.5 support.
Updated 0.4 code to the 005 schema.

0.14
Fixed a bug in the area filtering tasks where the original way was being passed to the destination instead of the modified way with only the available segments populated.
Fixed a bug in the way comparison code where changes in the ordering of segments wouldn't be picked up.
Fixed a bug in date parsing where the month was always being parsed a month in advance.
Added the ability to load database login credentials from a properties file.
Modified xml file writing to use 2 space indenting instead of 4.

0.13
Modified the --bounding-polygon task so it can read files containing blank lines.
Added the ability to dump mysql "current" tables.
Modified xml output to only write latitude and longitude to 7 decimal places.

0.12
Added a --read-api task for retrieving data from the central server.
Added "user" support to the core data types, and all relevant tasks except database writing tasks.
Added a --bounding-polygon task for filtering data by an area.
Added a --report task which will produce user statistics for a data set.

0.11
Modified mysql snapshot task to read entire contents of table and process data in code in attempt to improve dump times.
Added gzip and bzip2 support to xml tasks.
Modified all database snapshot tasks to include entities with a timestamp equalling the snapshot time.
Modified all database changeset tasks to not include the begin time and to include the end time.

0.10